kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pet-photo-gallery-backend
spec:
  selector:
    app: pet-photo-gallery-backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: LoadBalancer
